<resources>
    <string name="opcion1">Actividad 2</string>
    <string name="opcion2">Fragment TabHost</string>
    <string name="opcion3">Manipulando elementos por codigo</string>
    <string name="opcion4">Recycler View</string>
    <string name="Salir">Salir</string>
    <string name="tituloAplicacion">Mi primera app</string>
    <string name="app_name">Mi app</string>
    <string name="action_settings">Configuración</string>
    <string name="actividad1">Actividad1</string>
    <string name="actividad_1">Actividad 1</string>
    <string name="actividad_2">Actividad 2</string>
    <string name="leng_eta_1">Lengüeta 1</string>
    <string name="dialogo">Mi dialogo</string>
    <string name="Acercade">Acerca de </string>
</resources>